[gd_scene load_steps=5 format=2]

[ext_resource path="res://Recursos/Imágenes/2-Configuración.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Configuración.gd" type="Script" id=2]
[ext_resource path="res://Config_fuente.tres" type="DynamicFont" id=3]
[ext_resource path="res://Escenas/MusicaOnOff.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 882.673, 452.402 )
scale = Vector2( 1.30668, 1.17957 )
texture = ExtResource( 1 )

[node name="Volver" type="Button" parent="."]
margin_left = 437.0
margin_top = 832.0
margin_right = 617.0
margin_bottom = 894.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 0.239216, 0.262745, 0.329412, 1 )
self_modulate = Color( 0.972549, 0.972549, 0.972549, 1 )
margin_left = 428.0
margin_top = 165.0
margin_right = 1259.0
margin_bottom = 820.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pantalla" type="Label" parent="."]
margin_left = 778.0
margin_top = 203.0
margin_right = 931.0
margin_bottom = 242.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 3 )
text = "Pantalla"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MúsicaSonido" type="Label" parent="."]
margin_left = 699.0
margin_top = 497.0
margin_right = 918.0
margin_bottom = 536.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 3 )
text = "Música y Sonido"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pantalla completa" type="Button" parent="."]
modulate = Color( 0.537255, 0.596078, 1, 1 )
self_modulate = Color( 0.596078, 0.607843, 0.988235, 1 )
margin_left = 661.0
margin_top = 326.0
margin_right = 1072.0
margin_bottom = 388.0
custom_fonts/font = ExtResource( 3 )
text = "Pantalla Completa/Ventana"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicaOnOff" type="Button" parent="."]
modulate = Color( 0.580392, 0.364706, 0.788235, 1 )
margin_left = 756.0
margin_top = 611.0
margin_right = 976.0
margin_bottom = 679.0
custom_colors/font_color_hover = Color( 0.772549, 0.588235, 0.992157, 1 )
custom_colors/font_color_pressed = Color( 0.2, 0.0784314, 0.278431, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Encender"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Volver" to="." method="_on_Volver_pressed"]
[connection signal="pressed" from="Pantalla completa" to="." method="_on_Pantalla_completa_pressed"]
[connection signal="pressed" from="MusicaOnOff" to="." method="_on_MusicaOnOff_pressed"]
